# MobileNet-SSD-TensorRT

./: CMakeLists.txt  kernel.cu  main.cpp  tensorNet.h
motor/: LobotSerialServo.cpp  LobotSerialServo.h  main.cpp  main.h  uart.cpp  uart.h
